--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/jest": "^29.1.2",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.2.0",
+    "mocha": "^10.1.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.0.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
